--- a/contact-host.html
+++ b/contact-host.html
@@ -778,7 +778,7 @@
                                                 role="tablist"
                                                 aria-label="What can we help you find?"
                                               >
-                                                <div class="_socgfm6">
+                                                <div class="products-container__tablist-btn-1">
                                                   <button
                                                     id="search-block-tab-false-STAYS"
                                                     data-testid="header-tab-search-block-tab-false-STAYS"
@@ -788,8 +788,8 @@
                                                     type="button"
                                                     class="link"
                                                   >
-                                                    <div class="_3i1l2kz">
-                                                      <span class="_1t3783v"
+                                                    <div class="products-container__tablist-btn-1-text-wrapper">
+                                                      <span class="products-container__tablist-btn-1-text"
                                                         >Stays</span
                                                       >
                                                     </div></button
@@ -799,7 +799,7 @@
                                                     value="/homes"
                                                   />
                                                 </div>
-                                                <div class="_1ibug9jx">
+                                                <div class="products-container__tablist-btn-2">
                                                   <button
                                                     id="search-block-tab-false-EXPERIENCES"
                                                     data-testid="header-tab-search-block-tab-false-EXPERIENCES"
@@ -809,8 +809,8 @@
                                                     type="button"
                                                     class="link"
                                                   >
-                                                    <div class="_882esz">
-                                                      <span class="_1t3783v"
+                                                    <div class="products-container__tablist-btn-2-wrapper">
+                                                      <span class="products-container__tablist-btn-1-text"
                                                         >Experiences</span
                                                       >
                                                     </div>
@@ -821,8 +821,8 @@
                                                 <a
                                                   href="/s/experiences/online"
                                                   class="link"
-                                                  ><div class="_1igwknb5">
-                                                    <div class="_882esz">
+                                                  ><div class="products-container__tablist-btn-wrapper">
+                                                    <div class="products-container__tablist-btn-2-wrapper">
                                                       Online Experiences
                                                     </div>
                                                   </div></a
@@ -837,17 +837,17 @@
                                               data-panel-bounds="true"
                                             >
                                               <div class="header__search-tabs-filters dir dir-ltr">
-                                                <div class="_1jkbosm7">
-                                                  <div class="_1rwlbyy">
+                                                <div class="header__search-tabs-filters-wrapper">
+                                                  <div class="header__search-tabs-filters-content">
                                                     <label
-                                                      class="_1t9u8f6n"
+                                                      class="header__search-tabs-filters-label"
                                                       for="bigsearch-query-stays_location_inspirations-input"
-                                                      ><div class="_16fjzef">
-                                                        <div class="_snpd7k">
+                                                      ><div class="header__search-tabs-filters-label-wrapper">
+                                                        <div class="header__search-tabs-filters-label-text">
                                                           Where
                                                         </div>
                                                         <input
-                                                          class="_1yibeas"
+                                                          class="header__search-tabs-filters-label-input"
                                                           aria-autocomplete="none"
                                                           autocomplete="off"
                                                           autocorrect="off"
@@ -867,7 +867,7 @@
                                                       access suggested
                                                       results</span
                                                     >
-                                                    <div class="_yu5dnq">
+                                                    <div class="header__search-tabs-filter-body-container">
                                                       <div
                                                         class="header__search-tabs-filter-body l16t0m55 dir dir-ltr"
                                                         data-testid="structured-search-input-field-query-panel"
@@ -877,7 +877,7 @@
                                                             class="dir dir-ltr"
                                                           >
                                                             <div
-                                                              class="_1tb077f"
+                                                              class="header__search-tabs-filter-body-dialog"
                                                               role="dialog"
                                                               aria-label="Search suggestions"
                                                               id="bigsearch-query-stays_location_inspirations-listbox"
@@ -1430,7 +1430,7 @@
                                                       </div>
                                                     </div>
                                                     <span
-                                                      class="_1czersj"
+                                                      class="header__search-tabs-filter-spacer"
                                                       aria-atomic="true"
                                                       aria-live="polite"
                                                       role="status"
@@ -1531,11 +1531,11 @@
                                                     class="header__search-tabs-filter-searchBtn-container dir dir-ltr"
                                                   >
                                                     <button
-                                                      class="_4eosylk"
+                                                      class="header__search-tabs-filter-input-search"
                                                       type="button"
                                                       data-testid="structured-search-input-search-button"
                                                     >
-                                                      <div class="_186q534">
+                                                      <div class="header__search-tabs-filter-input-icon">
                                                         <div class="app-theme__sidebar-menu-expandable">
                                                           <svg
                                                             viewBox="0 0 32 32"
@@ -1560,7 +1560,7 @@
                                                             </g>
                                                           </svg>
                                                         </div>
-                                                        <div class="_1ikdh859">
+                                                        <div class="header__search-tabs-filter-input-label">
                                                           Search
                                                         </div>
                                                       </div>
