--- a/merchandising.html
+++ b/merchandising.html
@@ -4380,7 +4380,7 @@
                                                             aria-owns="search-block-tab-STAYS search-block-tab-EXPERIENCES"
                                                           >
                                                             <div
-                                                              class="_socgfm6"
+                                                              class="products-container__tablist-btn-1"
                                                             >
                                                               <button
                                                                 id="search-block-tab-STAYS"
@@ -4393,10 +4393,10 @@
                                                                 class="link"
                                                               >
                                                                 <div
-                                                                  class="_3i1l2kz"
+                                                                  class="products-container__tablist-btn-1-text-wrapper"
                                                                 >
                                                                   <span
-                                                                    class="_1t3783v"
+                                                                    class="products-container__tablist-btn-1-text"
                                                                     >Stays</span
                                                                   >
                                                                 </div></button
@@ -4407,7 +4407,7 @@
                                                               />
                                                             </div>
                                                             <div
-                                                              class="_1ibug9jx"
+                                                              class="products-container__tablist-btn-2"
                                                             >
                                                               <button
                                                                 id="search-block-tab-EXPERIENCES"
@@ -4420,10 +4420,10 @@
                                                                 class="link"
                                                               >
                                                                 <div
-                                                                  class="_882esz"
+                                                                  class="products-container__tablist-btn-2-wrapper"
                                                                 >
                                                                   <span
-                                                                    class="_1t3783v"
+                                                                    class="products-container__tablist-btn-1-text"
                                                                     >Experiences</span
                                                                   >
                                                                 </div>
@@ -4435,10 +4435,10 @@
                                                               href="/s/experiences/online"
                                                               class="link"
                                                               ><div
-                                                                class="_1igwknb5"
+                                                                class="products-container__tablist-btn-wrapper"
                                                               >
                                                                 <div
-                                                                  class="_882esz"
+                                                                  class="products-container__tablist-btn-2-wrapper"
                                                                 >
                                                                   Online
                                                                   Experiences
@@ -4462,21 +4462,21 @@
                                                               class="header__search-tabs-filter-where-container dir dir-ltr"
                                                             >
                                                               <div
-                                                                class="_1rwlbyy"
+                                                                class="header__search-tabs-filters-content"
                                                               >
                                                                 <label
-                                                                  class="_1t9u8f6n"
+                                                                  class="header__search-tabs-filters-label"
                                                                   for="bigsearch-query-location-input"
                                                                   ><div
-                                                                    class="_16fjzef"
+                                                                    class="header__search-tabs-filters-label-wrapper"
                                                                   >
                                                                     <div
-                                                                      class="_snpd7k"
+                                                                      class="header__search-tabs-filters-label-text"
                                                                     >
                                                                       Where
                                                                     </div>
                                                                     <input
-                                                                      class="_1yibeas"
+                                                                      class="header__search-tabs-filters-label-input"
                                                                       aria-autocomplete="none"
                                                                       autocomplete="off"
                                                                       autocorrect="off"
@@ -4498,7 +4498,7 @@
                                                                   results</span
                                                                 >
                                                                 <div
-                                                                  class="_yu5dnq"
+                                                                  class="header__search-tabs-filter-body-container"
                                                                 >
                                                                   <div
                                                                     class="header__search-tabs-filter-body l16t0m55 dir dir-ltr"
@@ -4509,7 +4509,7 @@
                                                                         class="dir dir-ltr"
                                                                       >
                                                                         <div
-                                                                          class="_1tb077f"
+                                                                          class="header__search-tabs-filter-body-dialog"
                                                                           role="dialog"
                                                                           aria-label="Search suggestions"
                                                                           id="bigsearch-query-location-listbox"
@@ -4782,7 +4782,7 @@
                                                                   </div>
                                                                 </div>
                                                                 <span
-                                                                  class="_1czersj"
+                                                                  class="header__search-tabs-filter-spacer"
                                                                   aria-atomic="true"
                                                                   aria-live="polite"
                                                                   role="status"
@@ -4883,12 +4883,12 @@
                                                                 class="header__search-tabs-filter-searchBtn-container dir dir-ltr"
                                                               >
                                                                 <button
-                                                                  class="_4eosylk"
+                                                                  class="header__search-tabs-filter-input-search"
                                                                   type="button"
                                                                   data-testid="structured-search-input-search-button"
                                                                 >
                                                                   <div
-                                                                    class="_186q534"
+                                                                    class="header__search-tabs-filter-input-icon"
                                                                   >
                                                                     <div
                                                                       class="app-theme__sidebar-menu-expandable"
@@ -4919,7 +4919,7 @@
                                                                       </svg>
                                                                     </div>
                                                                     <div
-                                                                      class="_1ikdh859"
+                                                                      class="header__search-tabs-filter-input-label"
                                                                     >
                                                                       Search
                                                                     </div>
